--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "g4/messenger",
-  "description": "PHP value objects",
+  "description": "RMQ messenger",
   "type": "library",
   "license": "MIT",
   "authors": [
@@ -27,7 +27,9 @@
     }
   },
   "require": {
-    "ext-redis": "*"
+    "ext-redis"               : "*",
+    "ext-json"               : "*",
+    "php-amqplib/php-amqplib" : ">=2.6.1"
   },
   "require-dev": {
     "phpunit/phpunit"           : "5.*",
