TC-419 - Create messages table

--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,8 @@
   },
   "require": {
     "ext-redis"               : "*",
-    "ext-json"               : "*",
+    "ext-json"                : "*",
+    "ext-pdo"                 : "*",
     "php-amqplib/php-amqplib" : ">=2.6.1"
   },
   "require-dev": {
